# netzbremse-dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml
app/: app.py  charts.py  components.py  data_loader.py
tests/: conftest.py  test_charts.py  test_data_loader.py
