[project]
name = "netzbremse-dashboard"
version = "1.0.0"
description = "Streamlit dashboard for visualizing Netzbremse speedtest measurements"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "streamlit-autorefresh>=1.0.1",
    "watchdog>=6.0.0",
    "python-dotenv>=1.2.1",
    "orjson>=3.11.7",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
